QR for studentMarksheet from db

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
-}
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbConnection": "Data Source=desktop-o0enem6\\sqlexpress;Initial Catalog=dbQRCode;Integrated Security=True"
+  }
+
+
+  }
