--- a/QRCodeProject.csproj
+++ b/QRCodeProject.csproj
@@ -12,6 +12,12 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\GeneratedQRCode\" />
+    <Folder Include="wwwroot\GeneratedStudentQRCode\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
